--- a/app/src/main/res/layout/product_manage_layout.xml
+++ b/app/src/main/res/layout/product_manage_layout.xml
@@ -48,6 +48,12 @@
                 android:layout_marginTop="@dimen/lg_padding"
                 android:padding="@dimen/md_padding">
 
+                <TextView
+                    android:id="@+id/productImageTag"
+                    android:visibility="gone"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content" />
+
                 <android.support.v7.widget.AppCompatImageView
                     android:id="@+id/productImage"
                     android:layout_width="@dimen/product_image_width"
