--- a/app/src/main/res/layout/product_item_layout.xml
+++ b/app/src/main/res/layout/product_item_layout.xml
@@ -28,7 +28,9 @@
                 android:adjustViewBounds="true"
                 android:background="@color/colorPrimary"
                 android:contentDescription="@string/contentDescription"
-                android:src="@mipmap/ic_launcher" />
+                android:src="@mipmap/ic_launcher"
+                app:layout_constraintLeft_toLeftOf="parent"
+                app:layout_constraintStart_toStartOf="parent" />
 
             <android.support.constraint.ConstraintLayout
                 android:layout_width="0dp"
@@ -39,20 +41,25 @@
 
                 <ImageView
                     android:id="@+id/editProduct"
-                    android:src="@drawable/ic_edit_dark_24dp"
-                    app:layout_constraintEnd_toEndOf="parent"
                     android:layout_width="wrap_content"
-                    android:layout_height="wrap_content" />
+                    android:layout_height="wrap_content"
+                    android:contentDescription="@string/contentDescription"
+                    android:src="@drawable/ic_edit_dark_24dp"
+                    app:layout_constraintEnd_toEndOf="parent" />
 
                 <TextView
                     android:id="@+id/productTitle"
                     style="@style/AppTheme.TextAppearance"
-                    android:layout_width="match_parent"
+                    android:layout_width="0dp"
                     android:layout_height="wrap_content"
                     android:shadowColor="@color/lightgray"
                     android:shadowRadius="@integer/textShadow"
                     android:textColor="@color/black"
-                    android:textStyle="bold" />
+                    android:textStyle="bold"
+                    app:layout_constraintEnd_toStartOf="@+id/editProduct"
+                    app:layout_constraintLeft_toLeftOf="parent"
+                    app:layout_constraintRight_toLeftOf="@+id/editProduct"
+                    app:layout_constraintStart_toStartOf="parent" />
 
                 <TextView
                     android:id="@+id/productDetails"
