--- a/app/src/main/res/layout/toolbar_post_details_layout.xml
+++ b/app/src/main/res/layout/toolbar_post_details_layout.xml
@@ -8,13 +8,13 @@
     android:background="@color/transparent"
     app:contentInsetEnd="70dp"
     app:contentInsetStart="0dp"
-    app:navigationIcon="@drawable/ic_arrow_back_white_24dp">
+    app:navigationIcon="@drawable/ic_arrow_back_white_24dp"/>
 
-    <RelativeLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:orientation="vertical">
+    <!--<RelativeLayout-->
+        <!--android:layout_width="match_parent"-->
+        <!--android:layout_height="wrap_content"-->
+        <!--android:orientation="vertical">-->
 
-    </RelativeLayout>
+    <!--</RelativeLayout>-->
 
-</android.support.v7.widget.Toolbar>
+<!--</android.support.v7.widget.Toolbar>-->
