--- a/app/src/main/res/layout/business_guide_add_layout.xml
+++ b/app/src/main/res/layout/business_guide_add_layout.xml
@@ -61,6 +61,12 @@
                         android:layout_height="wrap_content"
                         android:padding="@dimen/md_padding">
 
+                        <TextView
+                            android:id="@+id/businessId"
+                            android:visibility="gone"
+                            android:layout_width="0dp"
+                            android:layout_height="0dp" />
+
                         <android.support.constraint.ConstraintLayout
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content">
