--- a/mainlibrary/src/main/res/values/styles.xml
+++ b/mainlibrary/src/main/res/values/styles.xml
@@ -21,6 +21,7 @@
         <item name="android:windowNoTitle">true</item>
         <item name="android:windowIsFloating">true</item>
         <item name="android:backgroundDimEnabled">false</item>
+        <item name="android:alertDialogTheme">@style/AppAlertTheme</item>
     </style>
 
     <style name="AppThemeActionBar" parent="Theme.AppCompat.Light.DarkActionBar">
