--- a/app/src/main/res/layout/main_layout.xml
+++ b/app/src/main/res/layout/main_layout.xml
@@ -66,13 +66,25 @@
                     app:layout_collapseMode="parallax"
                     app:layout_scrollFlags="scroll|enterAlways|snap">
 
-                    <android.support.v7.widget.RecyclerView
-                        android:id="@+id/businessGuideRecyclerView"
+                    <com.brainsocket.mainlibrary.Views.Stateslayoutview
+                        android:id="@+id/featuredPostStatesLayout"
                         android:layout_width="match_parent"
                         android:layout_height="match_parent"
                         android:layout_above="@+id/SearchContainer"
+                        app:NoConnectionLayout="@layout/state_layout_noconnection"
+                        app:NoDataLayout="@layout/state_layout_nodata"
+                        app:RefreshbtnRes="@+id/retryBtn"
+                        app:WaitingLayout="@layout/state_layout_waiting"
                         app:layout_collapseMode="parallax"
-                        app:layout_scrollFlags="scroll|enterAlways|snap" />
+                        app:layout_scrollFlags="scroll|enterAlways|snap">
+
+                        <android.support.v7.widget.RecyclerView
+                            android:id="@+id/featuredPostsRecyclerView"
+                            android:layout_width="match_parent"
+                            android:layout_height="match_parent" />
+
+
+                    </com.brainsocket.mainlibrary.Views.Stateslayoutview>
 
                     <LinearLayout
                         android:id="@+id/SearchContainer"
