--- a/app/src/main/res/layout/product_manage_layout.xml
+++ b/app/src/main/res/layout/product_manage_layout.xml
@@ -50,9 +50,9 @@
 
                 <TextView
                     android:id="@+id/productImageTag"
-                    android:visibility="gone"
                     android:layout_width="wrap_content"
-                    android:layout_height="wrap_content" />
+                    android:layout_height="wrap_content"
+                    android:visibility="gone" />
 
                 <android.support.v7.widget.AppCompatImageView
                     android:id="@+id/productImage"
@@ -139,6 +139,7 @@
                         android:layout_width="0dp"
                         android:layout_height="wrap_content"
                         android:layout_weight="4"
+                        android:visibility="invisible"
                         app:ms9_shadowElevation="@dimen/md_elevation">
 
                         <LinearLayout
