--- a/app/src/main/res/layout/post_featured_item_layout.xml
+++ b/app/src/main/res/layout/post_featured_item_layout.xml
@@ -48,7 +48,8 @@
                 android:adjustViewBounds="true"
                 android:background="@drawable/transparent_radius_bg"
                 android:padding="@dimen/zero"
-                android:scaleType="center" />
+                android:scaleType="center"
+                android:src="@drawable/ic_launcher_web" />
 
             <android.support.v7.widget.AppCompatTextView
                 android:id="@+id/postTitle"
