--- a/app/src/main/res/layout/contact_post_dialog_layout.xml
+++ b/app/src/main/res/layout/contact_post_dialog_layout.xml
@@ -50,7 +50,7 @@
                 android:background="@drawable/button_bg"
                 android:padding="@dimen/md_padding"
                 android:shadowColor="@color/white"
-                android:text="@string/Contact"
+                android:text="@string/Call"
                 android:textColor="@color/white"
                 app:elevation="@dimen/elevation"
                 app:layout_constraintLeft_toLeftOf="parent"
