--- a/app/src/main/res/layout/business_guide_item_layout.xml
+++ b/app/src/main/res/layout/business_guide_item_layout.xml
@@ -4,11 +4,11 @@
     android:id="@+id/businessCard"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:layout_margin="@dimen/sm_margin"
+    android:layout_margin="@dimen/xsm_margin"
     app:cardBackgroundColor="@color/white"
     app:cardCornerRadius="@dimen/cardview_default_radius"
     app:cardElevation="@dimen/cardview_default_elevation"
-    app:cardUseCompatPadding="true">
+    app:cardUseCompatPadding="false">
 
     <android.support.constraint.ConstraintLayout
         android:layout_width="match_parent"
@@ -35,15 +35,17 @@
             android:gravity="center"
             android:orientation="vertical"
             android:padding="@dimen/xsm_margin"
+            app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toStartOf="@+id/tagContainer"
             app:layout_constraintLeft_toRightOf="@+id/businessIcon"
             app:layout_constraintRight_toLeftOf="@+id/tagContainer"
-            app:layout_constraintStart_toEndOf="@+id/businessIcon">
+            app:layout_constraintStart_toEndOf="@+id/businessIcon"
+            app:layout_constraintTop_toTopOf="parent">
 
             <android.support.v7.widget.AppCompatTextView
                 android:id="@+id/businessTitle"
                 style="@style/AppTheme.TextAppearance"
-                android:layout_width="wrap_content"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:ellipsize="end"
                 android:maxLines="1"
@@ -83,12 +85,12 @@
                     style="@style/commonNinePatchShadowItemViewStyle"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
+                    android:layout_marginBottom="@dimen/sm_margin"
                     android:layout_marginEnd="@dimen/zero"
-                    android:layout_marginRight="@dimen/zero"
                     android:layout_marginLeft="@dimen/sm_margin"
+                    android:layout_marginRight="@dimen/zero"
                     android:layout_marginStart="@dimen/sm_margin"
                     android:layout_marginTop="@dimen/sm_margin"
-                    android:layout_marginBottom="@dimen/sm_margin"
                     android:background="@drawable/white_radius_bg"
                     android:padding="@dimen/zero">
 
@@ -113,6 +115,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_gravity="right|end"
+                android:layout_margin="@dimen/sm_margin"
                 app:srcCompat="@drawable/ic_arrow_forward_black_24dp" />
 
         </LinearLayout>
