--- a/app/src/main/res/layout/business_guide_search_layout.xml
+++ b/app/src/main/res/layout/business_guide_search_layout.xml
@@ -11,6 +11,12 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent" />
 
+    <View
+        android:id="@+id/businessGuideRecyclerViewContainer"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:background="@color/blackTransparent"
+        android:visibility="gone" />
 
     <android.support.v7.widget.CardView
         android:id="@+id/filter_container"
