--- a/app/src/main/res/layout/media_item_layout.xml
+++ b/app/src/main/res/layout/media_item_layout.xml
@@ -6,7 +6,9 @@
         android:id="@+id/imageView"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_gravity="top"
         android:layout_alignParentTop="true"
-        android:adjustViewBounds="true" />
+        android:layout_gravity="top"
+        android:adjustViewBounds="true"
+        android:contentDescription="@string/contentDescription"
+        android:scaleType="fitXY" />
 </RelativeLayout>
