--- a/app/src/main/res/layout/pharmacy_duty_layout.xml
+++ b/app/src/main/res/layout/pharmacy_duty_layout.xml
@@ -12,6 +12,13 @@
         android:layout_height="match_parent" />
 
 
+    <View
+        android:id="@+id/businessGuideRecyclerViewContainer"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:background="@color/blackTransparent"
+        android:visibility="gone" />
+
     <android.support.v7.widget.CardView
         android:id="@+id/filter_container"
         android:layout_width="match_parent"
