--- a/app/src/main/res/layout/post_add_layout.xml
+++ b/app/src/main/res/layout/post_add_layout.xml
@@ -61,9 +61,9 @@
 
                         <TextView
                             android:id="@+id/postId"
-                            android:visibility="gone"
                             android:layout_width="0dp"
-                            android:layout_height="0dp" />
+                            android:layout_height="0dp"
+                            android:visibility="gone" />
 
                         <TextView
                             style="@style/AppTheme.TextAppearance"
@@ -124,6 +124,7 @@
                                     android:layout_gravity="top"
                                     android:layout_margin="@dimen/sm_margin"
                                     android:background="@drawable/rectangle_gray"
+                                    android:contentDescription="@string/contentDescription"
                                     android:padding="@dimen/md_padding"
                                     app:srcCompat="@drawable/ic_add_white_24dp" />
                             </LinearLayout>
@@ -215,17 +216,27 @@
                             android:layout_height="wrap_content"
                             app:tagBackgroundColor="@color/colorPrimary" />
 
-                        <android.support.v7.widget.AppCompatButton
-                            android:id="@+id/adAddBtn"
-                            style="@style/AppTheme.NormalButtonStyle"
+                        <android.support.constraint.ConstraintLayout
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
-                            android:layout_margin="@dimen/md_margin"
-                            android:background="@drawable/button_bg"
-                            android:padding="@dimen/md_padding"
-                            android:shadowColor="@color/black"
-                            android:text="@string/RegisterBusiness"
-                            android:textColor="@color/white" />
+                            android:layout_margin="@dimen/md_margin">
+
+                            <android.support.v7.widget.AppCompatButton
+                                android:id="@+id/adAddBtn"
+                                style="@style/AppTheme.SmallButtonStyle"
+                                android:layout_width="0dp"
+                                android:layout_height="@dimen/sm_btn_height"
+                                android:background="@drawable/button_bg"
+                                android:shadowColor="@color/black"
+                                android:text="@string/RegisterBusiness"
+                                android:textColor="@color/white"
+                                app:layout_constraintEnd_toEndOf="parent"
+                                app:layout_constraintLeft_toLeftOf="parent"
+                                app:layout_constraintRight_toRightOf="parent"
+                                app:layout_constraintStart_toStartOf="parent"
+                                app:layout_constraintWidth_percent="0.7" />
+
+                        </android.support.constraint.ConstraintLayout>
 
                     </LinearLayout>
 
@@ -289,13 +300,16 @@
             style="@style/AppTheme.NormalButtonStyle"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_below="@+id/submittedIcon"
             android:layout_margin="@dimen/md_margin"
             android:background="@drawable/button_bg"
             android:padding="@dimen/md_padding"
             android:shadowColor="@color/black"
             android:text="@string/Backtohome"
             android:textColor="@color/white"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintLeft_toLeftOf="parent"
+            app:layout_constraintRight_toRightOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/guideline2" />
 
         <android.support.constraint.Guideline
