--- a/app/src/main/res/layout/post_details_layout.xml
+++ b/app/src/main/res/layout/post_details_layout.xml
@@ -321,11 +321,13 @@
                         <android.support.v7.widget.AppCompatTextView
                             android:id="@+id/postDescription"
                             style="@style/AppTheme.TextAppearance"
-                            android:layout_width="wrap_content"
+                            android:layout_width="match_parent"
                             android:layout_height="wrap_content"
                             android:layout_gravity="start|left"
                             android:layout_marginBottom="@dimen/lg_margin"
+                            android:paddingEnd="@dimen/md_margin"
                             android:paddingLeft="@dimen/md_margin"
+                            android:paddingRight="@dimen/md_margin"
                             android:paddingStart="@dimen/md_margin"
                             android:text="Ad desctiption that advert about they add, description the app about the description the app about the plah plah ....."
                             android:textAlignment="gravity"
