--- a/app/src/main/res/layout/profile_edit_layout.xml
+++ b/app/src/main/res/layout/profile_edit_layout.xml
@@ -12,8 +12,13 @@
 
     <RelativeLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:background="@color/colorAccent">
+        android:layout_height="wrap_content">
+
+        <View
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:alpha="0.3"
+            android:background="@color/colorAccent" />
 
         <include
             android:id="@+id/toolbar"
