--- a/mainlibrary/src/main/res/values/colors.xml
+++ b/mainlibrary/src/main/res/values/colors.xml
@@ -11,6 +11,7 @@
     <color name="colorAlphaPrimary">#44F3C100</color>
 
     <color name="black">@android:color/black</color>
+    <color name="blackTransparent">#44000000</color>
     <color name="white">#FFFFFFFF</color>
     <color name="transparent">@android:color/transparent</color>
     <color name="lightgray">@android:color/darker_gray</color>
